--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "scripts": {
     "build": "tsc",
     "start": "node -r ts-node/register ./src/index.ts",
+    "start:in": "node -r ts-node/register",
     "start:watch": "nodemon",
     "start:inspect": "node --inspect=5858 -r ts-node/register ./src/index.ts",
     "dev": "yarn start:watch",
@@ -10,10 +11,14 @@
     "test": "jest"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.6",
     "@types/jest": "^25.1.2",
+    "@types/lodash": "^4.14.149",
     "@types/mongodb": "^3.3.15",
     "@types/mongoose": "^5.7.0",
+    "@types/morgan": "^1.7.37",
     "@types/node": "^13.7.0",
+    "@types/supertest": "^2.0.8",
     "@typescript-eslint/eslint-plugin": "^2.18.0",
     "@typescript-eslint/parser": "^2.18.0",
     "eslint": "6.8.0",
@@ -29,6 +34,7 @@
     "typescript": "3.7.5"
   },
   "dependencies": {
+    "@types/express": "^4.17.2",
     "bcrypt": "^3.0.7",
     "body-parser": "^1.19.0",
     "compression": "^1.7.4",
@@ -36,6 +42,7 @@
     "cross-fetch": "^3.0.4",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-validator": "^6.4.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
     "mongodb": "^3.5.2",
