--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "test": "jest"
   },
   "devDependencies": {
+    "@shelf/jest-mongodb": "^1.1.3",
+    "@types/bcrypt": "^3.0.0",
     "@types/cors": "^2.8.6",
     "@types/jest": "^25.1.2",
     "@types/lodash": "^4.14.149",
@@ -45,6 +47,7 @@
     "express-validator": "^6.4.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
+    "merge": "^1.2.1",
     "mongodb": "^3.5.2",
     "mongoose": "^5.8.11",
     "morgan": "^1.9.1",
