--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/morgan": "^1.7.37",
     "@types/node": "^13.7.0",
     "@types/supertest": "^2.0.8",
+    "@types/validator": "^12.0.1",
     "@typescript-eslint/eslint-plugin": "^2.18.0",
     "@typescript-eslint/parser": "^2.18.0",
     "eslint": "6.8.0",
