--- a/package.json
+++ b/package.json
@@ -52,6 +52,8 @@
     "mongodb": "^3.5.2",
     "mongoose": "^5.8.11",
     "morgan": "^1.9.1",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
     "validator": "^12.2.0"
   }
 }
