--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/bcrypt": "^3.0.0",
     "@types/cors": "^2.8.6",
     "@types/jest": "^25.1.2",
+    "@types/jsonwebtoken": "^8.3.7",
     "@types/lodash": "^4.14.149",
     "@types/mongodb": "^3.3.15",
     "@types/mongoose": "^5.7.0",
@@ -37,6 +38,7 @@
     "typescript": "3.7.5"
   },
   "dependencies": {
+    "@sendgrid/mail": "^6.5.2",
     "@types/express": "^4.17.2",
     "bcrypt": "^3.0.7",
     "body-parser": "^1.19.0",
